--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorToolbar">#454545</color>
+    <color name="colorWhite">#fdfefe</color>
+    <color name="border">#c3c3c3</color>
 </resources>
