--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -12,7 +12,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginRight="6dip"
             android:contentDescription="TODO"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/dca_logo" />
 
     <TextView
             android:id="@+id/secondLine"
@@ -22,7 +22,7 @@
             android:layout_alignParentRight="true"
             android:layout_toRightOf="@id/icon"
             android:ellipsize="marquee"
-            android:text="Description"
+            android:text="DCA CONSULTING"
             android:textSize="12sp"
             android:singleLine="true" />
 
