--- a/app/src/main/res/layout/secondfragment_layout.xml
+++ b/app/src/main/res/layout/secondfragment_layout.xml
@@ -1,22 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".FirstFragment"
-        >
+        tools:context=".FirstFragment">
 
     <com.synnapps.carouselview.CarouselView
             android:id="@+id/carousel"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="150dp"
             app:fillColor="#FFFFFFFF"
             app:pageColor="#00000000"
             app:radius="6dp"
             app:strokeColor="#FF777777"
-            app:strokeWidth="1dp"/>
+            app:strokeWidth="1dp">
+
+        <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:layout_gravity="center"
+                android:textSize="20dp"
+                android:textColor="@color/colorWhite"
+                android:textStyle="bold"
+                android:text="
+                Une expertise mondiale inegalée au service de nos clients en France!" />
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorWhite"  
+                android:text="DCA CONSULTING"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:gravity="right"
+                android:layout_gravity="right"
+                android:textSize="25dp">
+
+        </TextView>
+    </com.synnapps.carouselview.CarouselView>
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:baselineAligned="false"
+            android:scrollbars="vertical" />
 
 </LinearLayout>
