--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -17,4 +17,21 @@
                 android:id="@+id/nav_third_fragment"
                 android:title="@string/third_icon" />
     </group>
+
+    <item android:title="Fonctionnalités suplémentaires">
+
+        <menu>
+            <group android:checkableBehavior="single">
+                <item
+                        android:id="@+id/media"
+                        android:icon="@drawable/ic_one"
+                        android:title="Média" />
+                <item
+                        android:id="@+id/test"
+                        android:icon="@drawable/ic_two"
+                        android:title="Sub item 2" />
+            </group>
+        </menu>
+
+    </item>
 </menu>
