--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -27,8 +27,12 @@
                         android:icon="@drawable/ic_one"
                         android:title="Média" />
                 <item
-                        android:id="@+id/test"
+                        android:id="@+id/camera"
                         android:icon="@drawable/ic_two"
+                        android:title="Sub item 2" />
+                <item
+                        android:id="@+id/videoplayer"
+                        android:icon="@drawable/ic_three"
                         android:title="Sub item 2" />
             </group>
         </menu>
